Home stretch - need to fix change reservation

--- a/public/css/skyline.less
+++ b/public/css/skyline.less
@@ -17,18 +17,12 @@ body { color:black; }  // background-color: #333;
 .Head4 { position:absolute; left:60%; width: 20%; top:0; height:100%; }
 .HeadA { position:absolute; left:0;   width:100%; top:0; height:100%; }
 
-.Instruct  { position:relative; left:0;   width:100%; top:0; height:70px; }
-.Instruct1 { position:absolute; left:0;   width: 20%; top:0; height:100%; }
-.Instruct2 { position:absolute; left:22%; width: 20%; top:0; height:100%; }
-.Instruct3 { position:absolute; left:40%; width: 20%; top:0; height:100%; }
-.Instruct4 { position:absolute; left:60%; width: 20%; top:0; height:100%; }
-.InstructA { position:absolute; left:0;   width:100%; top:0; height:100%; }
-
-#Book   { text-align:center; display:none; }
-#Inits  { display:inline-block; font-size:12px; margin-top:12px; margin-bottom:12px; }
-.InitIp { }
-#Rooms  { display:inline-block; }
-.Test   { background-color:black; color:white; border-radius:12px; }
+#Book     { text-align:center; display:none; }
+.Instruct { display:inline-block; text-align:left; }
+#Inits    { display:inline-block; font-size:12px; margin-top:12px; margin-bottom:12px; }
+.InitIp   { }
+#Rooms    { display:inline-block; }
+.Test     { background-color:black; color:white; border-radius:12px; margin-left:10px; }
 
 #View     { position:relative; left:0;   width:100%; top:0;   height:100%; background-color: #555; color:yellow; }
 .HomeSee  { position:absolute; left:20%; width: 80%; top: 5%; height:  7%; font-weight:bold; font-size:1.2em; text-align:center; }
@@ -37,8 +31,6 @@ body { color:black; }  // background-color: #333;
 #Slides   { position:absolute; left:22%; width: 78%; top:0;   height:100%; }
 .RoomLI   { color:white; height:8%;  }
 .RoomLI a { color:white; }
-
-
 
 .guests       { text-align:center; width:44px; }
 .pets         { text-align:center; }
@@ -119,18 +111,19 @@ body { color:black; }  // background-color: #333;
 
 #GotoPay { text-align:center; margin:auto; }
 
-#Pays        { text-align:center; display:none; }
-#PayDiv      { display:inline-block;  }
-.PayBtns     { text-align:center; margin-top:30px; }
-#Approval    { text-align:center;  color:blue; font-size:18px; font-weight:bold; margin-top:12px; margin-bottom:12px; display:none; }
-#ConfirmName { display:inline-block; width:auto; margin:auto; height:60px; font-size:20px; }
-.Title       { text-align:center; color:blue; font-size:24px; font-weight:bold; margin-top:12px; margin-bottom:12px; }
+#Pays         { text-align:center; display:none; }
+#PayDiv       { display:inline-block;  }
+.PayBtns      { text-align:center; margin-top:30px; }
+#Approval     { text-align:center;  color:blue; font-size:18px; font-weight:bold; margin-top:12px; margin-bottom:12px; display:none; }
+#ConfirmName  { display:inline-block; width:auto; margin:auto; height:60px; font-size:20px; }
+#ConfirmBlock {}
+#ConfirmTable {}
+.Title        { text-align:center; color:blue; font-size:24px; font-weight:bold; margin-top:12px; margin-bottom:12px; }
 
 .CenterAlign { text-align:center;    }
 .DivCenter   { display:inline-block; }
 
-
-.ContactCenter  { display:inline-block; text-align:left; font-size:24px; nargin-top:8px; }
+.ContactCenter  { display:inline-block; text-align:left; font-size:24px; margin-top:8px; }
 .ContactLabel   { display:inline-block; width:180px; font-weight:bold; }
 .ContactOwner   { font-weight:bold; margin-top:24px; }
 
